# esaxx-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
benches/: bench_get_counts.rs  bench_suffix.rs  esaxx.rs
examples/: suffix_cpp_short.rs  suffix_rs_short.rs
src/: esa.rs  esaxx.cpp  lib.rs  sais.hxx  sais.rs  types.rs
