[package]
name = "esaxx-rs"
version = "0.1.7"
authors = ["Nicolas Patry <patry.nicolas@protonmail.com>"]
edition = "2018"
description = "Wrapping around sentencepiece's esaxxx library."
license = "Apache-2.0"
homepage = "https://github.com/Narsil/esaxx-rs"
documentation = "https://docs.rs/esaxx-rs"
repository = "https://github.com/Narsil/esaxx-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.3"

[features]
unsafe = []

[[bench]]
name = "bench_suffix"
harness = false
